<resources>
    <string name="app_name">SPARC</string>
    <string name="username_text">Username</string>
    <string name="email_text">Email</string>

    <string name="newsfeed">Newsfeed</string>
    <string name="publications">Publications</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="article">Article</string>
    <string name="settings">Settings</string>
    <string name="profle">Profile</string>

    <string name="drawer_open">Drawer is Open</string>
    <string name="drawer_close">Drawer is Closed</string>
    <string name="transaction_error">Something went wrong</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="search_label">Search Publications</string>
    <string name="pf_placeholder">Publications Fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="query_hint">Search by Title...</string>
    <string name="menu_search">menu search</string>
    <string name="publication_logo">Publication Logo</string>

    <string name="article_title">Sample Title</string>
    <string name="article_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris feugiat diam sollicitudin est semper, eu porta libero pulvinar. Aenean at lacus rhoncus, pharetra elit ut, ultricies magna</string>
    <string name="article_favorite_snackbar">This article was added to your Favorites</string>
    <string name="article_remove_favorite_snackbar">This article was removed from your Favorites</string>

    <string name="article_sample_favorited">Sample article added to Favorites</string>
    <string name="article_sample_title">Sample Title</string>
    <string name="article_sample_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris feugiat diam sollicitudin est semper, eu porta libero pulvinar. Aenean at lacus rhoncus, pharetra elit ut, ultricies magna.</string>
    <string name="sign_up_btn_text">SIGN UP</string>
    <string name="facebook_login_btn_text">CONTINUE WITH FACEBOOK</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
</resources>
