<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/newsfeed"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/newsfeed"/>

        <item
            android:id="@+id/publications"
            android:checked="false"
            android:icon="@drawable/ic_picture_in_picture_black_24dp"
            android:title="@string/publications"/>

        <item
            android:id="@+id/profile"
            android:checked="false"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profle"/>

        <item
            android:id="@+id/bookmarks"
            android:checked="false"
            android:icon="@drawable/ic_bookmark_black_24dp"
            android:title="@string/bookmarks"/>

        <item
            android:id="@+id/settings"
            android:checked="false"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings"/>
    </group>
</menu>